# blackwall

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml
.github/workflows/: ci.yml
.superpowers/sdd/: task-b3-2-report.md  task-b4-1-report.md
crates/blackwall-api/: Cargo.toml
crates/blackwall-api/src/: auth.rs  dto.rs  error.rs  handlers.rs  lib.rs  state.rs  testutil.rs
crates/blackwall-api/tests/: openapi_contract.rs  read_endpoints.rs
crates/blackwall-bgp/: Cargo.toml
crates/blackwall-bgp/lab/: bgp-netns-lab.sh
crates/blackwall-bgp/src/: error.rs  flowspec.rs  lib.rs  message.rs  render.rs  route.rs  session_net.rs  update.rs
crates/blackwall-bgp/tests/: bird_validate.rs  flowspec_interop.rs  interop.rs
crates/blackwall-config/: Cargo.toml
crates/blackwall-config/src/: error.rs  lexer.rs  lib.rs  parser.rs
crates/blackwall-cookie/: Cargo.toml
crates/blackwall-cookie/src/: lib.rs
crates/blackwall-core/: Cargo.toml
crates/blackwall-core/src/: api.rs  dns.rs  engine.rs  flowspec.rs  flowtable.rs  flux.rs  hsflowd.rs  lib.rs  md5secret.rs  policy.rs  pop.rs  port.rs  proto.rs  resolve.rs  rtbh.rs  shape.rs  target.rs  xdp.rs
crates/blackwall-deception/: Cargo.toml
crates/blackwall-deception/src/: banner.rs  banner_reload.rs  banner_source.rs  conn.rs  cookie.rs  emulator.rs  error.rs  flux.rs  lib.rs  limits.rs
crates/blackwall-deception/src/emulators/: generic.rs  http.rs  mod.rs  mysql.rs  postgres.rs  redis.rs  smtp.rs  ssh.rs
crates/blackwall-deception/src/transport/: metrics.rs  mod.rs  nfqueue.rs  packet.rs  tproxy.rs  traits.rs
crates/blackwall-deception/tests/: interop.rs  tproxy_netns.rs
crates/blackwall-discovery/: Cargo.toml
crates/blackwall-discovery/src/: error.rs  host.rs  incus_client.rs  incus_event.rs  incus_model.rs  lib.rs  proc_io.rs  reconcile.rs
crates/blackwall-dns/: Cargo.toml
crates/blackwall-dns/src/: error.rs  flux.rs  lib.rs  send_net.rs  tsig.rs  update.rs
crates/blackwall-dns/tests/: interop.rs
crates/blackwall-flow/: Cargo.toml
crates/blackwall-flow/examples/: sflow-blast.rs
crates/blackwall-flow/src/: agents.rs  collector_net.rs  detector.rs  error.rs  lib.rs  metrics.rs  observation.rs  select.rs  sflow.rs  sink.rs
crates/blackwall-flow/tests/: decode_real.rs  interop.rs
crates/blackwall-lab/: Cargo.toml
crates/blackwall-lab/scenarios/: armed-disarm-bird.kdl  armed-noneg-flowspec-bird.kdl  armed-protect-reannounce-bird.kdl  bgp-bird-md5.kdl  bgp-bird.kdl  bird-gen.kdl  deception-nft.kdl  deception-resilience.kdl  deception-syncookie-v6.kdl  deception-syncookie.kdl  dns-knot.kdl  flow-sflow-live.kdl  flow-sflow.kdl  flowspec-auto-bird.kdl  flowspec-bird.kdl  rtbh-bird.kdl  shaper-cake.kdl  trafficgen-foundation.kdl
crates/blackwall-lab/scenarios/fixtures/: bird-gen.conf
crates/blackwall-lab/src/: addr.rs  assert.rs  cli.rs  error.rs  lib.rs  plan.rs  report.rs
crates/blackwall-lab/src/exec/: mod.rs  netns.rs  proc.rs  runner.rs
crates/blackwall-lab/src/render/: bird.rs  hsflowd.rs  knot.rs  mod.rs  (+1 more)
crates/blackwall-lab/tests/: parse_scenario.rs
crates/blackwall-metrics/: Cargo.toml
crates/blackwall-metrics/src/: lib.rs
crates/blackwall-nft/: Cargo.toml
crates/blackwall-nft/examples/: render_config.rs
crates/blackwall-nft/src/: apply.rs  error.rs  lib.rs  render.rs
crates/blackwall-nft/src/snapshots/: blackwall_nft__render__tests__ruleset_json_snapshot.snap
crates/blackwall-nft/tests/: apply_netns.rs
crates/blackwall-rpki/: Cargo.toml
crates/blackwall-rpki/src/: fetch.rs  lib.rs
crates/blackwall-rtbh/: Cargo.toml
crates/blackwall-rtbh/src/: controller.rs  flowspec_controller.rs  flowspec_manager.rs  lib.rs  manager.rs  rate_limit.rs  shadow.rs  sink.rs
crates/blackwall-rtbh/tests/: armed_disarm_interop.rs  armed_protect_reannounce_interop.rs  flowspec_auto_interop.rs  interop.rs
crates/blackwall-shaper/: Cargo.toml
crates/blackwall-shaper/src/: apply.rs  bandwidth.rs  command.rs  error.rs  lib.rs  plan.rs
crates/blackwall-shaper/tests/: interop.rs
crates/blackwall-speedtest/: Cargo.toml
crates/blackwall-speedtest/src/: aggregate.rs  error.rs  lib.rs  provider.rs  reading.rs  runner.rs  source.rs  throughput.rs
crates/blackwall-speedtest/src/providers/: client_net.rs  cloudflare_net.rs  cloudflare_parse.rs  fast_net.rs  fast_parse.rs  librespeed_net.rs  librespeed_parse.rs  mod.rs  ookla_net.rs  ookla_parse.rs
crates/blackwall-state/: Cargo.toml
crates/blackwall-state/migrations/: 0001_init.sql  0002_sessions.sql  0003_detections.sql  0004_rtbh_blackholes.sql  0005_flowspec.sql  0006_xdp_blocks.sql  0007_xdp_rate_limit_target.sql  0008_cookie_secret.sql
crates/blackwall-state/src/: audit.rs  cookie.rs  detections.rs  error.rs  flowspec.rs  lib.rs  rtbh.rs  services.rs  sessions.rs  tenants.rs  xdp.rs
crates/blackwall-trafficgen/: Cargo.toml
crates/blackwall-trafficgen/src/: error.rs  flow.rs  lib.rs  pattern.rs  rate.rs  report.rs  spec.rs
crates/blackwall-trafficgen/src/io/: connect.rs  mod.rs  recv.rs  send.rs
crates/blackwall-xdp/: Cargo.toml  build.rs
crates/blackwall-xdp-common/: Cargo.toml
crates/blackwall-xdp-common/src/: lib.rs
crates/blackwall-xdp-ebpf/: Cargo.toml  rust-toolchain.toml
crates/blackwall-xdp-ebpf/src/: main.rs
crates/blackwall-xdp/src/: afxdp.rs  capture.rs  control.rs  dataplane.rs  keys.rs  lib.rs  manager.rs  pcap.rs  sink.rs
crates/blackwall-xdp/tests/: afxdp_redirect.rs  ddos_drop.rs  prog_test_run.rs
deploy/: blackwalld-deception.service  blackwalld-flow.service
deploy/runit/blackwalld-deception/: finish  run
deploy/runit/blackwalld-flow/: run
docs/: deployment.md  runbook-deception.md  runbook-flow-mitigation.md
docs/superpowers/plans/: 2026-07-09-blackwall-am4-phase1-read-api.md  2026-07-11-blackwall-anycast-telemetry-ingest.md
docs/superpowers/specs/: 2026-07-09-blackwall-am4-api-ops-design.md  2026-07-10-blackwall-anycast-telemetry-ingest-design.md
scripts/: build-lab-tests.sh  coverage.sh  smoke-deception.sh  smoke-flow.sh
(+6 files in other folders)
