[package]
name = "blackwall-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = "=0.8.1"
tower = "=0.5.2"
tower-http = { version = "=0.6.8", features = ["trace"] }
utoipa = { version = "=5.3.1", features = ["axum_extras"] }
subtle = "=2.6.1"
sha2 = "=0.10.8"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
http-body-util = "=0.1.2"
# Self dev-dependency: pulls in this crate again with `testutil` enabled so
# `tests/read_endpoints.rs` (a separate, external test crate) can see
# `testutil::FakeState`, while normal (non-dev) builds never compile it.
blackwall-api = { path = ".", features = ["testutil"] }

[features]
# Exposes `testutil::FakeState` outside `#[cfg(test)]` so the external
# integration test crate (`tests/read_endpoints.rs`) can use it.
testutil = []

[lints]
workspace = true
