[package]
name = "blackwall-bgp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-core = { path = "../blackwall-core" }
thiserror = { workspace = true }
ipnet = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
socket2 = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
blackwall-config = { path = "../blackwall-config" }

[lints]
workspace = true
