[package]
name = "blackwall-deception"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-core = { path = "../blackwall-core" }
tokio = { workspace = true, features = ["time", "sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
socket2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "io-util"] }

[lints]
workspace = true
