[package]
name = "blackwall-deception"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-core = { path = "../blackwall-core" }
tokio = { workspace = true, features = ["time", "sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
socket2 = { workspace = true }
etherparse = { workspace = true }
nfq = { workspace = true }
siphasher = "1.0.3"

[dev-dependencies]
blackwall-nft = { path = "../blackwall-nft" }
blackwall-core = { path = "../blackwall-core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "rt", "io-util"] }

[lints]
workspace = true
