[package]
name = "blackwall-flow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
ipnet = { workspace = true }
etherparse = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["time", "net", "sync"] }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
