[package]
name = "blackwall-nft"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-core = { path = "../blackwall-core" }
nftables = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
