[package]
name = "blackwall-rtbh"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-bgp = { path = "../blackwall-bgp" }
blackwall-flow = { path = "../blackwall-flow" }
ipnet = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints]
workspace = true
