[package]
name = "blackwall-rtbh"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-bgp = { path = "../blackwall-bgp" }
blackwall-flow = { path = "../blackwall-flow" }
ipnet = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# `signal` is needed only by the `armed_disarm_interop` gate driver (C5: it
# installs its own SIGUSR1 handler, mirroring blackwalld's disarm_signal_task)
# — not by any unit test, so it stays scoped to dev-dependencies.
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "signal"] }
# Test-only counting `Layer` for the `disarm` log-once assertion (#193
# residual) — avoids adding `tracing-test` as a new dependency; reuses the
# workspace-pinned version already used by `blackwalld`.
tracing-subscriber = { workspace = true }

[lints]
workspace = true
