[package]
name = "blackwall-shaper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-core = { path = "../blackwall-core" }
blackwall-speedtest = { path = "../blackwall-speedtest" }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
