[package]
name = "blackwall-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-bgp = { path = "../blackwall-bgp" }
blackwall-core = { path = "../blackwall-core" }
blackwall-flow = { path = "../blackwall-flow" }
blackwall-rtbh = { path = "../blackwall-rtbh" }
blackwall-xdp = { path = "../blackwall-xdp" }
async-trait = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
ipnet = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
