[package]
name = "blackwall-trafficgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
etherparse = "0.20.2"
socket2 = { version = "0.5.10", features = ["all"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "trafficgen"
path = "src/bin/trafficgen.rs"
