[package]
name = "blackwall-trafficgen"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
etherparse = "0.20.2"
libc = "0.2.186"
socket2 = { version = "0.5.10", features = ["all"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ipnet = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "time",
    "net",
    "io-util",
    "rt-multi-thread",
    "macros",
] }

[lints]
workspace = true

[[bin]]
name = "trafficgen"
path = "src/bin/trafficgen.rs"
