[package]
name = "blackwall-xdp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blackwall-xdp-common = { path = "../blackwall-xdp-common" }
blackwall-core = { path = "../blackwall-core" }
blackwall-flow = { path = "../blackwall-flow" }
ipnet = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
# aya added in Task 4 (dataplane):
aya = "0.13.1"
# AF_XDP socket/UMEM/ring layer (sub-project B3.1). aya provides only the
# XSKMAP (`aya::maps::XskMap`), not the AF_XDP socket + UMEM + fill/completion/RX
# rings. `xdpilone` is a pure-Rust AF_XDP implementation (no libbpf/libxdp-sys C
# build dependency — only libc + spin), exact-pinned for the zero-copy/copy-mode
# receiver. Socket I/O is coverage-excluded (see scripts/coverage.sh).
xdpilone = "=1.3.0"
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
libc = { workspace = true }
# The BPF_PROG_TEST_RUN gate cross-checks the in-kernel SYN-cookie against the
# shared no_std core (B2.2): the eBPF program and this test compute the cookie
# from the identical code, so an in-kernel == userspace mismatch fails the test.
blackwall-cookie = { path = "../blackwall-cookie" }
# The AF_XDP round-trip gate (B3.2) drives the real responder pipeline, so it
# reuses the deception tier's reflection-safe `udp_l2_response` builder rather
# than reimplementing it. dev-only: no crate-layering cycle (blackwall-deception
# does not depend on blackwall-xdp).
blackwall-deception = { path = "../blackwall-deception" }

[lints]
workspace = true
